--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,10 @@
         <title>LinkCheck Results</title>
     </head>
     <body>
-    <p>Here's the broken links</p>
+    <p>Here's the broken links for this website:
+        {{ parent }}
+
+    </p>
     <p></p>
     {{ thelines }}
     </body>
