--- a/templates/index3.html
+++ b/templates/index3.html
@@ -11,9 +11,16 @@
 
 </head>
 <body>
-<form action="/signup" method="post">
-  <input type="text" name="email"></input>
-  <input type="submit" value="Signup"></input>
+<p></p>
+ <p>Enter the website you would like to check:</p>
+
+<form method="POST">
+   <p> http://<input name="text">
+    <input type="submit">
+</p>
+
+
+
 </form>
 </body>
 </html>
