changed port to 8080 for OpenShift deployment.
Signed-off-by: nmschorr <nancyschorr@yahoo.com>

--- a/templates/getaddy.html
+++ b/templates/getaddy.html
@@ -2,7 +2,7 @@
 <html>
    <body>
 
-      <form action = "http://localhost:5000/resultpage" method = "POST">
+      <form action = "./resultpage" method = "POST">
          <p>Website: <input type = "text" size="45" name = "siteaddy" /></p>
          <p><input type = "submit" value = "submit"/></p>
 
