--- a/templates/getaddy.html
+++ b/templates/getaddy.html
@@ -3,15 +3,8 @@
    <body>
 
       <form action = "./resultpage" method = "POST">
-         <p>Website: <input type = "text" size="45" name = "siteaddy" /></p>
-         <p><input type = "submit" value = "submit"/></p>
-
-
-         <!--<p>Name <input type = "text" name = "Name" /></p>-->
-         <!--<p>Physics <input type = "text" name = "Physics" /></p>-->
-         <!--<p>Chemistry <input type = "text" name = "chemistry" /></p>-->
-         <!--<p>Maths <input type ="text" name = "Mathematics" /></p>-->
-         <!--<p><input type = "submit" value = "submit" /></p>-->
+         <p>Enter website you want to Link-Check here: <input type = "text" size="55" name = "siteaddy" /></p>
+         <p><input type = "submit" value = "Submit and Test"/></p>
       </form>
 
    </body>
