--- a/templates/getaddy.html
+++ b/templates/getaddy.html
@@ -2,7 +2,8 @@
 <html>
    <body>
 
-      <form action = "./resultpage" method = "POST">
+     <!--<form action = "./waitpage" method = "POST">-->
+     <form action = "./resultpage" method = "POST">
          <p>Enter website you want to Link-Check here: <input type = "text" size="55" name = "siteaddy" /></p>
          <p><input type = "submit" value = "Submit and Test"/></p>
       </form>
