--- a/templates/getaddy.html
+++ b/templates/getaddy.html
@@ -3,8 +3,8 @@
    <body>
 
      <!--<form action = "./waitpage" method = "POST">-->
-     <form action = "./resultpage" method = "POST">
-         <p>Enter website you want to Link-Check here: <input type = "text" size="55" name = "siteaddy" /></p>
+     <form action = "./waitpage" method = "POST">
+         <p>Enter website you want to Link-Check here: http://<input type = "text" size="55" name = "siteaddy" /></p>
          <p><input type = "submit" value = "Submit and Test"/></p>
       </form>
 
