--- a/templates/waiting.html
+++ b/templates/waiting.html
@@ -4,7 +4,7 @@
 
 <script>
 setTimeout(function() {
-  window.location.href = "http://localhost:5000/results";
+  window.location.href = "http://localhost:5000/resultz";
 }, 3000);
 </script>
 
