New prototype working great for threading.
Signed-off-by: nmschorr <nancyschorr@yahoo.com>

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,24 +1,16 @@
 <!DOCTYPE html>
-<html><head>
-    <script type="text/javascript">// <![CDATA[
-        function loading(){
-            $("#loading").show();
-            $("#content").hide();
-        }
- ]]></script>
+<html>
+<head>
     Welcome!
 </head>
    <body>
 Welcome to LinkCheck!
-     <form action = "results" method = "POST"   >
-         <p>
+     <form action = "results" method ="POST">
+
              Enter website or webpage you want to LinkCheck here:
              <input type = "text" size="55" name = "name" />
-         </p>
-         <p><input type = "submit" value = "Submit and Test" onclick="loading();"></p>
 
-
-
+        <input type = "submit" value = "Submit"/>
       </form>
 
    </body>
