--- a/templates/results.html
+++ b/templates/results.html
@@ -1,22 +1,28 @@
 <!doctype html>
 <html>
-    <head>
+<head>
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script>
+$(document).ready(function(){
+    $("button").click(function(){
+        $("#div1").load("demo_test.txt");
+    });
+});
+</script>
+
         <title>Results from LinkCheck</title>
 
-        </head>
-   <body>
+</head>
+<body>
 
    <h2> Here are the broken links:</h2>
 
     Brief list:
 
-
-{% for item in name %}
-{{ item }}
-
-{% endfor %}
-
-
+<div id="div1"><h2>Let jQuery AJAX Change This Text</h2></div>
+<button>Get External Content</button>
 
 
 </body>
