New prototype working well with threading and temp files.
Signed-off-by: nmschorr <nancyschorr@yahoo.com>

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,10 @@
 <html>
 <head>
     Welcome!
+
+
+
+
 </head>
    <body>
 Welcome to LinkCheck!
@@ -12,6 +16,11 @@ Welcome to LinkCheck!
 
         <input type = "submit" value = "Submit"/>
       </form>
+
+    <script>
+        var base_url = location.href
+        document.write(base_url)
+    </script>
 
    </body>
 </html>
