--- a/templates/results.html
+++ b/templates/results.html
@@ -3,26 +3,23 @@
 <head>
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script>
-$(document).ready(function(){
-    $("button").click(function(){
-        $("#div1").load("demo_test.txt");
-    });
-});
-</script>
-
         <title>Results from LinkCheck</title>
 
 </head>
 <body>
+<br>
+<p></p>
 
-   <h2> Here are the broken links:</h2>
+You entered:
+{{ name }}
 
-    Brief list:
+<p></p>
 
-<div id="div1"><h2>Let jQuery AJAX Change This Text</h2></div>
-<button>Get External Content</button>
+
+   <h2> Click here for broken links:</h2>
+
+   <a href="http://127.0.0.1:5000/resultsn"/>Your Results</a>
+
 
 
 </body>
