--- a/templates/resultsn.html
+++ b/templates/resultsn.html
@@ -3,21 +3,56 @@
     <head>
         <title>Results from LinkCheck</title>
 
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+
+<script >
+
+var rootd = location.href;
+var fn = {{ name }} ;
+var rootandfn = rootd + '/' + fn;
+
+$("button").click(function(){
+    $("#div1").load(rootandfn);
+});
+
+
+
+
+</script>
+
+
         </head>
    <body>
 
    <h2> Here are the broken links:</h2>
 
-    Brief list:
+    Filename:
+
+<p></p>
 
 
-{% for item in name %}
-{{ item }}
-
-{% endfor %}
+{{ name }}
 
 
+rootd:
+   <script type="text/javascript">
 
+       document.write(location.href);
+   </script>
+
+<div id="div1"><h2>Let jQuery AJAX Change This Text</h2></div>
+
+<button>Get External Content</button>
+
+<script type="text/javascript" >
+var rootd = location.href;
+var fn = '{{ name |e }}' ;
+var myfn =  location.href + '/' + fn;
+document.write(" myfn: " + myfn);
+</script>
 
 </body>
 
