--- a/templates/resultsn.html
+++ b/templates/resultsn.html
@@ -5,23 +5,8 @@
 
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 
-<script >
-
-var rootd = location.href;
-var fn = {{ name }} ;
-var rootandfn = rootd + '/' + fn;
-
-$("button").click(function(){
-    $("#div1").load(rootandfn);
-});
-
-
-
-
-</script>
 
 
         </head>
@@ -37,22 +22,43 @@ $("button").click(function(){
 {{ name }}
 
 
-rootd:
-   <script type="text/javascript">
+location.origin:  <br>
+<script type="text/javascript">
 
-       document.write(location.href);
-   </script>
+   document.write(location.origin);
+
+</script>
+
+
+<p></p>
+
+<script type=text/javascript>
+var troot = location.origin;
+var wstat = troot.concat("/static/");
+var cname = '{{ name }}';
+var myurl = wstat.concat(cname);
+
+document.write("<p></p>myurl: ");
+document.write(myurl);
+</script>
+
+
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
+
+$("button").click(function(){
+    $("#div1").load(myurl);
+});
+
+</script>
 
 <div id="div1"><h2>Let jQuery AJAX Change This Text</h2></div>
-
 <button>Get External Content</button>
 
-<script type="text/javascript" >
-var rootd = location.href;
-var fn = '{{ name |e }}' ;
-var myfn =  location.href + '/' + fn;
-document.write(" myfn: " + myfn);
-</script>
+
+
+
 
 </body>
 
