New prototype working well with threading and temp files.
Signed-off-by: nmschorr <nancyschorr@yahoo.com>

--- a/templates/resultsn.html
+++ b/templates/resultsn.html
@@ -1,14 +1,38 @@
 <!doctype html>
 <html>
     <head>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
+$("button").click(function(){
+    $("#div2").load(myurl);
+});
+
+</script>
+
+<script type=text/javascript>
+var troot = location.origin;
+var wstat = troot.concat("/static/");
+var cname = '{{ name }}';
+var myurl = wstat.concat(cname);
+
+
+
+function load() {
+    var file = new XMLHttpRequest();
+    file.open("GET",myurl, true);
+    file.onreadystatechange = function() {
+      if (file.readyState === 4) {  // Makes sure the document is ready to parse
+        if (file.status === 200) {  // Makes sure it's found the file
+          text = file.responseText;
+          document.getElementById("div1").innerHTML = text;
+        }
+      }
+    }
+}
+window.onLoad = load();
+</script>
+
         <title>Results from LinkCheck</title>
-
-
-
-
-
-
-
         </head>
    <body>
 
@@ -24,36 +48,29 @@
 
 location.origin:  <br>
 <script type="text/javascript">
-
    document.write(location.origin);
+   document.write(window.onLoad)
 
 </script>
 
 
 <p></p>
 
-<script type=text/javascript>
-var troot = location.origin;
-var wstat = troot.concat("/static/");
-var cname = '{{ name }}';
-var myurl = wstat.concat(cname);
+
+
+
+
+<div id="div1">
+    <h2>Let jQuery AJAX Change This Text
+    </h2></div>
+
+
 
 document.write("<p></p>myurl: ");
 document.write(myurl);
-</script>
 
 
 
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
-
-$("button").click(function(){
-    $("#div1").load(myurl);
-});
-
-</script>
-
-<div id="div1"><h2>Let jQuery AJAX Change This Text</h2></div>
 <button>Get External Content</button>
 
 
