Working great. Just need to add a 404 error page.
Signed-off-by: nmschorr <nancyschorr@yahoo.com>

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,8 @@
 
 </head>
    <body>
-Welcome to LinkCheck!
+&nbsp;&nbsp;&nbsp;&nbsp; Welcome to LinkCheck
+<p></p>
      <form action = "results" method ="POST">
 
              Enter website or webpage you want to LinkCheck here:
@@ -18,8 +19,6 @@ Welcome to LinkCheck!
       </form>
 
     <script>
-        var base_url = location.href
-        document.write(base_url)
     </script>
 
    </body>
