--- a/templates/notready.html
+++ b/templates/notready.html
@@ -16,7 +16,7 @@ $.when( $.ready ).then(function() {
 
 </script>
 
-        <title>Results from LinkCheck</title>
+        <title>Results</title>
 </head>
 <body>
 
@@ -25,10 +25,10 @@ $.when( $.ready ).then(function() {
 
 
 
-<h2>Query Results</h2>
+<h2>Results</h2>
 
 <p></p>
-Here are the broken links. If nothing follows, then no broken links found.
+Here are the broken links. If nothing follows, then no broken links found, or results not ready yet.
 
 
 
