--- a/templates/results.html
+++ b/templates/results.html
@@ -17,6 +17,7 @@ You entered:
 
 
    <h2> Click here for broken links:</h2>
+   <h4> This might take up to 10+ mins for larger websites.</h4>
 
    <a href="http://127.0.0.1:5000/resultsn"/>Your Results</a>
 
