Almost new beta for OpenShift deploy.
Signed-off-by: nmschorr <nancyschorr@yahoo.com>

--- a/templates/results.html
+++ b/templates/results.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html>
 <head>
-
-
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+<meta http-equiv="Pragma" content="no-cache" />
+<meta http-equiv="Expires" content="0" />
         <title>Results from LinkCheck</title>
 
 </head>
@@ -10,17 +11,19 @@
 <br>
 <p></p>
 
-You entered:
-{{ name }}
+
 
 <p></p>
 
 
-   <h2> Click here for broken links:</h2>
+   <h2> Click below for your results:</h2>
+
+&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;   <a href="http://127.0.0.1:5000/{{name}}"/>
+
+Results </a>
+
    <h4> This might take up to 10+ mins for larger websites.</h4>
-
-   <a href="http://127.0.0.1:5000/resultsn"/>Your Results</a>
-
 
 
 </body>
