Fixed host for OpenShift with ports.
Signed-off-by: nmschorr <nancyschorr@yahoo.com>

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    Welcome!
+   <h2>Welcome to LinkCheck</h2>
 
 
 
 
 </head>
    <body>
-&nbsp;&nbsp;&nbsp;&nbsp; Welcome to LinkCheck
+
 <p></p>
      <form action = "results" method ="POST">
 
-             Enter website or webpage you want to LinkCheck here:
+       &nbsp;&nbsp;&nbsp;&nbsp; Enter website or webpage you want to LinkCheck here:
              <input type = "text" size="55" name = "name" />
 
         <input type = "submit" value = "Submit"/>
