New changes for OpenShift with ports.
Signed-off-by: nmschorr <nancyschorr@yahoo.com>

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <h2>Welcome to LinkCheck</h2>
-
-
-
+   <h2>&emsp;&emsp;Welcome to LinkCheck</h2>
+<style>
+h4 {text-align:center;}
+p {text-align:center;}
+form { text-align: left; }
+</style>
 
 </head>
-   <body>
+<body>
 
 <p></p>
-     <form action = "results" method ="POST">
 
-       &nbsp;&nbsp;&nbsp;&nbsp; Enter website or webpage you want to LinkCheck here:
-             <input type = "text" size="55" name = "name" />
+<p>
 
-        <input type = "submit" value = "Submit"/>
-      </form>
+<form action = "results" method ="POST">
+Enter website or webpage <br>
+you want to LinkCheck here:<br>
+(no http prefix needed) http://
+<input type = "text" size="55" name = "name" />
+    <br>&emsp;&emsp;
+<input type = "submit" value = "Submit"/>
+</form>
 
-    <script>
-    </script>
+ </p>
 
-   </body>
+</body>
 </html>
