--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,9 @@
 h4 {text-align:center;}
 p {text-align:center;}
 form { text-align: left; }
+body {padding-left:5em; }
+.space { margin-left:45px;}
+input99 {  margin-left:45px  }
 </style>
 
 </head>
@@ -20,8 +23,9 @@ Enter website or webpage <br>
 you want to LinkCheck here:<br>
 (no http prefix needed) http://
 <input type = "text" size="55" name = "name" />
-    <br>&emsp;&emsp;
-<input type = "submit" value = "Submit"/>
+    <br>
+      <div class="space">
+          <input type = "submit" value = "  Submit  "/> </div>
 </form>
 
  </p>
