Big reorg fixed again.
Signed-off-by: nmschorr <nancyschorr@yahoo.com>

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html>
-<head>
-   <h2>&emsp;&emsp;Welcome to LinkCheck</h2>
 <style>
 h4 {text-align:center;}
 p {text-align:center;}
@@ -10,13 +8,15 @@ body {padding-left:5em; }
 .space { margin-left:45px;}
 input99 {  margin-left:45px  }
 </style>
+<head><title>Welcome to LinkCheck</title>
 
 </head>
 <body>
+   <h2>&emsp;&emsp;Welcome to LinkCheck</h2>
 
 <p></p>
 
-<p>
+<p></p>
 
 <form action = "results" method ="POST">
 Enter website or webpage <br>
@@ -28,7 +28,7 @@ you want to LinkCheck here:<br>
           <input type = "submit" value = "  Submit  "/> </div>
 </form>
 
- </p>
+
 
 </body>
 </html>
