Fixing globals again more.
Signed-off-by: nmschorr <nancyschorr@yahoo.com>

--- a/templates/results.html
+++ b/templates/results.html
@@ -5,10 +5,13 @@
 <meta http-equiv="Pragma" content="no-cache" />
 <meta http-equiv="Expires" content="0" />
         <title>Results from LinkCheck</title>
-
+<style>
+</style>
 </head>
-<body onload="bodyReady();" >
-<script src="varsenv.js" >
+
+
+<body onload="bodyReady();" style="{padding-left:5em; }" >
+<script src="/templates/varsenv.js" >
 </script>
 
 
