Fixing globals again more.
Signed-off-by: nmschorr <nancyschorr@yahoo.com>

--- a/templates/results.html
+++ b/templates/results.html
@@ -11,7 +11,8 @@
 
 
 <body onload="bodyReady();" style="{padding-left:5em; }" >
-<script src="/templates/varsenv.js" >
+        <!--script src="/templates/varsenv.js" >-->
+<script>
 </script>
 
 
