--- a/templates/results.html
+++ b/templates/results.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
 <meta http-equiv="Pragma" content="no-cache" />
-<meta http-equiv="Expires" content="0" />
+<meta http-equiv="Expires" content="-1" />
 
 
         <title>Results from LinkCheck</title>
@@ -59,6 +59,15 @@ document.write(homeURL);
 
 
 </body>
+
+<head>
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+<meta http-equiv="Pragma" content="no-cache" />
+<meta http-equiv="Expires" content="-1" />
+
+
+</head>
+
 
 
 </html>
