Tidied up fonts.
Signed-off-by: nmschorr <nancyschorr@yahoo.com>

--- a/templates/results.html
+++ b/templates/results.html
@@ -7,12 +7,16 @@
 
 
         <title>Results from LinkCheck</title>
+
+
 <style>
+body { padding-left:10em;}
+h4 {color:purple;}
 </style>
 </head>
 
-<style>body {padding-left:10em;}</style>
-<body" >
+
+<body>
 
 <br>
 <p></p>
@@ -23,7 +27,7 @@
 <h4>  Click the link below to check your results:</h4>
 
 <script>
-var fname = '{{ name }} ';
+var fname = '{{ name }}';
 var df = document.referrer;
 var statd = "static/"
 var divy = "<div style=padding-left:2em;>";
@@ -36,9 +40,9 @@ document.write("<p></p>");
 </script>
 
 <div style=padding-left:5em;>
-   <h4><i> This might take up to 10+ mins for larger websites.</i></h4>
+    <h4><i> This might take up to 10+ mins for larger websites.</i></h4>
 </div>
-
+</div>
 </body>
 
 <head>
