--- a/templates/results.html
+++ b/templates/results.html
@@ -9,6 +9,7 @@
         <title>Results from LinkCheck</title>
 
 
+
 <style>
 body { padding-left:10em;}
 h4 {color:purple;}
@@ -26,15 +27,16 @@ h4 {color:purple;}
 
 <h4>  Click the link below to check your results:</h4>
 
+<script type="text/javascript"></script>
 <script>
 var fname = '{{ name }}';
 var df = document.referrer;
-var statd = "static/"
+var statd = "static/";
 var divy = "<div style=padding-left:2em;>";
-var newURL = "<h1><a href=" + df + statd + fname + ">Click Here for Results</a></h1>";
 document.write(divy);
+var wholeurl = "<h1><a href=" + df + statd + fname + ">Click Here for Results</a></h1>";
 
-document.write(newURL);
+document.write(wholeurl);
 document.write("</div>");
 document.write("<p></p>");
 </script>
@@ -42,7 +44,6 @@ document.write("<p></p>");
 <div style=padding-left:5em;>
     <h4><i> This might take up to 10+ mins for larger websites.</i></h4>
 </div>
-
 </body>
 
 <head>
