--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html>
 <html>
+<head>
+
+<head>
+
+<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+
+
+
 <style>
 h4 {text-align:center;}
 p {text-align:center;}
 form { text-align: left; }
 body {padding-left:5em; }
-.space { margin-left:45px;}
+.space { margin-left:75px;}
 input99 {  margin-left:45px  }
 </style>
-<head><title>Welcome to LinkCheck</title>
+
+<title>Welcome to LinkCheck</title>
 
 </head>
+
+
 <body>
-   <h2>&emsp;&emsp;Welcome to LinkCheck</h2>
+<p>&nbsp;</p>
+   <h2>&emsp;           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&emsp;Welcome to LinkCheck</h2>
 
 <p></p>
 
@@ -23,12 +36,14 @@ Enter website or webpage <br>
 you want to LinkCheck here:<br>
 (no http prefix needed) http://
 <input type = "text" size="55" name = "name" />
-    <br>
-      <div class="space">
-          <input type = "submit" value = "  Submit  "/> </div>
+    <br>&nbsp;
+      <div class="space">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+         <input type = "submit" value = "       Submit       "/> </div>
 </form>
 
-
+<p>&nbsp;</p>
 
 </body>
 </html>
