--- a/templates/results.html
+++ b/templates/results.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
 <head>
+
+
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
 <meta http-equiv="Pragma" content="no-cache" />
 <meta http-equiv="Expires" content="-1" />
@@ -8,7 +10,7 @@
 
         <title>Results from LinkCheck</title>
 
-
+<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 
 <style>
 body { padding-left:10em;}
@@ -42,8 +44,10 @@ document.write("<p></p>");
 </script>
 
 <div style=padding-left:5em;>
-    <h4><i> This might take up to 10+ mins for larger websites.</i></h4>
+    <h4><i> This might take up to 10+ mins for larger websites.</i>
 </div>
+<p>&nbsp;</p>
+<p>&nbsp;</p></h4>
 </body>
 
 <head>
