--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head>
+<!DOCTYPE html
+      PUBLIC "-//W3C//DTD HTML 4.01//EN"
+      "http://www.w3.org/TR/html4/strict.dtd">
 
-<head>
+<html lang="en-US">
+<head profile="http://www.w3.org/2005/10/profile">
+<link rel="icon"
+      type="image/png"
+      href="http://example.com/myicon.png">
+
 
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 
