--- a/templates/results.html
+++ b/templates/results.html
@@ -1,5 +1,8 @@
-<!doctype html>
-<html>
+<!DOCTYPE html
+      PUBLIC "-//W3C//DTD HTML 4.01//EN"
+      "http://www.w3.org/TR/html4/strict.dtd">
+
+<html lang="en-US">
 <head>
 
 
@@ -11,6 +14,7 @@
         <title>Results from LinkCheck</title>
 
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+
 
 <style>
 body { padding-left:10em;}
@@ -45,18 +49,18 @@ document.write("<p></p>");
 
 <div style=padding-left:5em;>
     <h4><i> This might take up to 10+ mins for larger websites.</i>
-</div>
+
 <p>&nbsp;</p>
 <p>&nbsp;</p></h4>
-</body>
+</div>
+<div>
+</div></body>
 
 <head>
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
 <meta http-equiv="Pragma" content="no-cache" />
 <meta http-equiv="Expires" content="-1" />
-
 </head>
-
 
 
 </html>
