--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
 <p></p>
 
 <form action="results" method ="POST">
-    <div style="padding-left:5em;" }>
+    <div style="padding-left:5em;" >
 Enter website or webpage<br>
 you want to LinkCheck here<br>
 (no http prefix needed)  http://
