Tiny changes to fonts etc.
Signed-off-by: nmschorr <nancyschorr@yahoo.com>

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,12 +31,18 @@ you want to LinkCheck here<br>
 <input type="text" size="55" name="name"><br>
         &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
         &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
-        <br>&nbsp;
+        <br>&nbsp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
+        &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
 <input type="submit" value="     Submit     ">
-</div>
+    </div>
 </form>
-<p></p>
 <p>&nbsp;</p>
 
+
+<div style="padding-left:15em; font-style:italic; color:purple">
+If you receive any page not found errors, etc., <br>
+please reload the page, and/or clear your cache.
+<p>&nbsp;</p>
+</div>
 </body>
 </html>
