--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,11 @@
       href="http://example.com/myicon.png">
 
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+<meta http-equiv="Pragma" content="no-cache" />
+<meta http-equiv="Expires" content="-1" />
+
+
 <title>Welcome to LinkCheck</title>
 
 </head>
@@ -45,4 +50,14 @@ please reload the page, and/or clear your cache.
 <p>&nbsp;</p>
 </div>
 </body>
+
+<head>
+
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+<meta http-equiv="Pragma" content="no-cache" />
+<meta http-equiv="Expires" content="-1" />
+</head>
+
+
+
 </html>
