--- a/templates/results.html
+++ b/templates/results.html
@@ -14,6 +14,7 @@
         <title>Results from LinkCheck</title>
 
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+<link rel="icon" type="image/png" href="http://schorrmedia.com/favicon.png">
 
 </head>
 
