--- a/templates/results.html
+++ b/templates/results.html
@@ -5,10 +5,10 @@
 <html lang="en-US">
 <head>
 
-
-<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<meta http-equiv="Cache-Control" content="no-cache" />
 <meta http-equiv="Pragma" content="no-cache" />
-<meta http-equiv="Expires" content="-1" />
+<meta http-equiv="Expires" content="0" />
 
 
         <title>Results from LinkCheck</title>
@@ -60,9 +60,9 @@ document.write("<p></p>");
 </body>
 
 <head>
-<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+<meta http-equiv="Cache-Control" content="no-cache" />
 <meta http-equiv="Pragma" content="no-cache" />
-<meta http-equiv="Expires" content="-1" />
+<meta http-equiv="Expires" content="0" />
 </head>
 
 
