--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,8 @@
 <link rel="icon" type="image/png" href="http://schorrmedia.com/favicon.png">
 
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<meta http-equiv="Cache-Control" content="no-cache" />
 <meta http-equiv="Pragma" content="no-cache" />
 <meta http-equiv="Expires" content="-1" />
 
@@ -51,7 +52,7 @@ please reload the page, and/or clear your cache.
 
 <head>
 
-<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+<meta http-equiv="Cache-Control" content="no-cache" />
 <meta http-equiv="Pragma" content="no-cache" />
 <meta http-equiv="Expires" content="-1" />
 </head>
