--- a/templates/results.html
+++ b/templates/results.html
@@ -1,14 +1,12 @@
-<!DOCTYPE html
-      PUBLIC "-//W3C//DTD HTML 4.01//EN"
+<!DOCTYPE html  PUBLIC "-//W3C//DTD HTML 4.01//EN"
       "http://www.w3.org/TR/html4/strict.dtd">
 
 <html lang="en-US">
 <head>
-
+<meta name="title" content="LinkCheck"/>
+<meta http-equiv="Cache-Control" content="no-cache, max-age=0">
+<meta http-equiv="Expires" content="0">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<meta http-equiv="Cache-Control" content="no-cache" />
-<meta http-equiv="Pragma" content="no-cache" />
-<meta http-equiv="Expires" content="0" />
 
 
         <title>Results from LinkCheck</title>
@@ -19,15 +17,17 @@
 </head>
 
 
-<body style="{ padding-left:10em; }" >
-<div style="{ padding-left:10em; color:purple; }">
+<body style="padding-left:10em;" >
+<div style="padding-left:10em; color:purple;">
 
-<br>
-<p>&nbsp;</p>
-
-
+<br><p>&nbsp;</p>
 
 <h4> &nbsp;&nbsp;&nbsp;&nbsp; Click the link below to check your results:</h4>
+</div>
+
+
+
+
 
 
 <script type="text/javascript">
@@ -43,8 +43,13 @@ document.write("</div>");
 document.write("<p></p>");
 </script>
 
-</div>
-<div style="{ padding-left:10em; color:purple;}">
+
+
+
+
+<p></p>
+
+<div style="padding-left:10em; color:purple;">
     <h4 style="color:purple;"><i>
         &ensp; &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
         This might take up to 10+ mins for larger websites.</i>
@@ -54,15 +59,13 @@ document.write("<p></p>");
 
 <div>
     <p>&nbsp;</p>
-
 </div>
 
 </body>
 
 <head>
-<meta http-equiv="Cache-Control" content="no-cache" />
-<meta http-equiv="Pragma" content="no-cache" />
-<meta http-equiv="Expires" content="0" />
+<meta http-equiv="Cache-Control" content="no-cache">
+<meta http-equiv="Expires" content="0">
 </head>
 
 
