--- a/templates/results.html
+++ b/templates/results.html
@@ -2,11 +2,13 @@
       "http://www.w3.org/TR/html4/strict.dtd">
 
 <html lang="en-US">
+
 <head>
-<meta name="title" content="LinkCheck"/>
+
+<meta name="title" content="LinkCheck">
 <meta http-equiv="Cache-Control" content="no-cache, max-age=0">
 <meta http-equiv="Expires" content="0">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 
         <title>Results from LinkCheck</title>
@@ -14,36 +16,36 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <link rel="icon" type="image/png" href="http://schorrmedia.com/favicon.png">
 
+    <script>
+function demof() {
+    var fname = '{{ name }}';
+    var dr = document.referrer;
+    var statd = 'static/';
+    midl = dr + statd + fname;
+    var demo = "<script><a href=" + midl + ">Click Here for Results</a><\/script>";
+    document.getElementById("demo").innerHTML = demof();
+
+}
+</script>
+
 </head>
-
-
-<body style="padding-left:5em;" >
+<body >
 <div style="padding-left:10em; color:purple;">
-
-<br><p>&nbsp;</p>
-
-<h4> &nbsp;&nbsp;&nbsp;&nbsp; Click the link below to check your results:</h4>
+<script>
+</script>
 </div>
 
 
+<div>
+<br><p id="demof"></p>
+
+<h4> &nbsp;&nbsp;&nbsp;&nbsp; Click the link below to check your results2:</h4>
+</div>
+
+<div style=padding-left:12em;>
 
 
-
-
-<script type="text/javascript">
-var fname = '{{ name }}';
-var df = document.referrer;
-var statd = "static/";
-var divy = "<div style=padding-left:12em;>";
-document.write(divy);
-var wholeurl = "<h1><a href=" + df + statd + fname + ">Click Here for Results</a></h1>";
-
-document.write(wholeurl);
-document.write("</div>");
-document.write("<p></p>");
-</script>
-
-
+</div>
 
 
 
@@ -57,9 +59,6 @@ document.write("<p></p>");
 
 </div>
 
-<div>
-    <p>&nbsp;</p>
-</div>
 
 </body>
 
