Working for pythonanywhere.
Signed-off-by: nmschorr <nancyschorr@yahoo.com>

--- a/templates/results.html
+++ b/templates/results.html
@@ -28,40 +28,40 @@ function demof() {
 </script>
 
 </head>
-<body onload="demof()">
-<div style="padding-left:10em; color:purple;">
-<script>
-</script>
+<body onload="demof()"; style="padding-left:5em; font-size: large; font-weight: bold;">
+<div style="padding-left:7em; color:purple;">
+   <p> <br></p>
+
 </div>
 
 
 <div>
-<h4> &nbsp;&nbsp;&nbsp;&nbsp; Click the link below to check your results2:</h4>
+<h4> &nbsp;&nbsp;&nbsp;&nbsp; Click the link below to check your results:</h4>
 </div>
 
 
 
-<div id="demod"></div>
+<div id="demod" style=padding-left:7em;></div>
 
 
 
-<div style=padding-left:12em;>
+<div>
 
 
 </div>
 
 
 
-<p></p>
+<p> </p>
 
-<div style="padding-left:10em; color:purple;">
+<div style="padding-left:7em; color:purple;">
     <h4 style="color:purple;"><i>
         &ensp; &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
         This might take up to 10+ mins for larger websites.</i>
     </h4>
 
 </div>
-
+<p> <br></p>
 
 </body>
 
