Tiny fixes from PA
Signed-off-by: nmschorr <nancyschorr@yahoo.com>

--- a/templates/index.html
+++ b/templates/index.html
@@ -43,11 +43,17 @@ you want to LinkCheck here<br>
 <p>&nbsp;</p>
 
 
-<div style="padding-left:15em; font-style:italic; color:purple">
-If you receive any page not found errors, etc., <br>
-please reload the page, and/or clear your cache.
-<p>&nbsp;</p>
+<div style="padding-left:9em; font-style:italic; font-size: 100%; color:red">
+Don't put this window behind other windows or minimize.</div> <br>
+
+<div style="padding-left:12em; font-style:bold; font-size: 140%; color:red">
+It must stay in front.</div><br>
+<div style="padding-left:9em; font-style:italic; font-size: 120%; color:purple">
+
+Soon another page will appear with a link you'll need to click on.
+<p> &nbsp; </p><p>   &nbsp;</p>
 </div>
+
 </body>
 
 <head>
