--- a/templates/index.html
+++ b/templates/index.html
@@ -13,42 +13,44 @@
 <meta http-equiv="Expires" content="-1" />
 
 
-<title>Welcome to LinkCheck</title>
+<title>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+        &ensp;&ensp;&emsp;&emsp;&emsp;&emsp;&ensp;Welcome to LinkCheck</title>
 
 </head>
 
-
 <body>
-<p>&nbsp;</p>
-   <h2>&emsp;           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-&emsp;Welcome to LinkCheck</h2>
 
-<p></p>
+<h1 style="padding-left:2em; padding-top:1em;">
+Welcome to LinkCheck</h1>
 
-<p></p>
+<div style="padding-left:14em; font-style:bold; color: #377ba8;">
+    This app is not meant for large websites.  <br>
+    The larger the website the longer it takes.<br> &emsp;<br>
+    You must keep this window open <br>
+    and in front in order for the program to complete.
+</div>
+
 
 <form action="results" method ="POST">
-    <div style="padding-left:5em;" >
+<div style="padding-left:5em;padding-top:2em;" >
 Enter website or webpage<br>
 you want to LinkCheck here<br>
 (no http prefix needed)  http://
 <input type="text" size="55" name="name"><br>
-        &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
-        &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
-        <br>&nbsp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
-        &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
-<input type="submit" value="     Submit     ">
+</div><div style="padding-left:15em;  padding-top:10px;padding-bottom:6px;">
+<input type="submit" value="Submit" style="min-width:19em">
+
     </div>
 </form>
-<p>&nbsp;</p>
 
 
-<div style="padding-left:9em; font-style:italic; font-size: 100%; color:red">
-Don't put this window behind other windows or minimize.</div> <br>
 
-<div style="padding-left:12em; font-style:bold; font-size: 140%; color:red">
-It must stay in front.</div><br>
-<div style="padding-left:9em; font-style:italic; font-size: 120%; color:purple">
+<div style="padding-left:9em;padding-top:2em; font-style:italic; font-size: 100%; color:red">
+Don't put this window behind other windows or minimize.</div>
+
+<div style="padding-left:12em; padding-top:1em; font-style:bold; font-size: 140%; color:red">
+It must stay in front.</div>
+<div style="padding-left:9em; padding-top:1em; font-style:italic; font-size: 120%; color:purple">
 
 Soon another page will appear with a link you'll need to click on.
 <p> &nbsp; </p><p>   &nbsp;</p>
