--- a/templates/results.html
+++ b/templates/results.html
@@ -28,7 +28,7 @@ function demof() {
 </script>
 
 </head>
-<body onload="demof()"; style="padding-left:5em; font-size: large; font-weight: bold;">
+<body onload="demof()" style="padding-left:5em; font-size: large; font-weight: bold;">
 <div style="padding-left:7em; color:purple;">
    <p> <br></p>
 
