--- a/templates/index.html
+++ b/templates/index.html
@@ -20,10 +20,10 @@
 
 <body>
 
-<h1 style="padding-left:2em; padding-top:1em;">
+<h1 style="text-align:center; padding-top:1em;">
 Welcome to LinkCheck</h1>
 
-<div style="padding-left:14em; font-style:bold; color: #377ba8;">
+<div style="text-align:center; font-style:bold; color: #377ba8;">
     This app is not meant for large websites.  <br>
     The larger the website the longer it takes.<br> &emsp;<br>
     You must keep this window open <br>
@@ -45,17 +45,19 @@ you want to LinkCheck here<br>
 
 
 
-<div style="padding-left:9em;padding-top:2em; font-style:italic; font-size: 100%; color:red">
-Don't put this window behind other windows or minimize.</div>
+<div style="text-align:center; padding-top:2em; font-style:italic; font-size: 100%; color:red">
+Don't put this window behind other windows or minimize. </div>
 
-<div style="padding-left:12em; padding-top:1em; font-style:bold; font-size: 140%; color:red">
-It must stay in front.</div>
-<div style="padding-left:9em; padding-top:1em; font-style:italic; font-size: 120%; color:purple">
+<div style="text-align:center; padding-top:1em; font-weight: bolder; font-size: 150%; color:red">
+Keep this window in front.</div>
+<div style="text-align:center; padding-top:1em; font-style:italic; font-size: 120%; color:purple">
 
 Soon another page will appear with a link you'll need to click on.
-<p> &nbsp; </p><p>   &nbsp;</p>
-</div>
 
+</div>
+<div style="text-align:center; padding-top:1em; font-style:italic; font-size: 92%; color:purple">Only errors 400, 404, 408, 409 are reported.
+</div>
+<p> &nbsp; </p><p>   &nbsp;</p>
 </body>
 
 <head>
