cleanup for deploy
Signed-off-by: nmschorr <nancyschorr@yahoo.com>

--- a/templates/index-orig.html
+++ b/templates/index-orig.html
@@ -31,7 +31,7 @@ Welcome to LinkCheck</h1>
 </div>
 
 
-<form action="resultsnew" method ="POST">
+<form action="results" method ="POST">
 <div style="padding-left:5em;padding-top:2em;" >
 Enter website or webpage<br>
 you want to LinkCheck here<br>
